finalized prompts, and query statements to database, wrote README

--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/sevaggap/UofT-SCS-Coding-Bootcamp-Homework-12-Employee-Management-System#readme",
   "dependencies": {
+    "console.table": "^0.10.0",
     "inquirer": "^8.2.0",
     "mysql2": "^2.3.3"
   }
